@@ -1,2 +1,2 @@
-#define VERSION "0.93.00"
+#define VERSION "0.93.50"
 #define YEARS   "2008-2012"
