@@ -5,5 +5,6 @@ Options::Options()
     d_interactive(false),
     d_lines(true),
     d_print(false),
-    d_debug(false)
+    d_debug(false),
+    d_maxDepth(10),
 {}
