@@ -10,6 +10,7 @@
 #include <bobcat/arg>
 #include <bobcat/mstream>
 #include <bobcat/string>
+#include <bobcat/a2x>
 
 #include "../options/options.h"
 #include "../state/state.h"
